--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,7 @@
 {
-  "name": "@yigitkonur/latitude-ai-sdk",
+  "name": "@yigitkonur/latitude-deno-sdk",
   "version": "1.0.0",
-  "description": "A community maintained Latitude AI SDK for Deno and Supabase Edge Functions",
+  "description": "Latitude Deno SDK - Community fork of the official Node.js SDK, rebuilt for Deno and Supabase Edge Functions",
   "license": "MIT",
   "exports": "./src/mod.ts",
 
