feat: JSR quality improvements - 100% score target
- Add comprehensive JSDoc documentation to all exports
- Fix all slow types with explicit type annotations
- Add module-level documentation
- Enable isolatedDeclarations in deno.json
- Add GitHub Actions workflow for JSR publishing with OIDC auth
- Bump version to 1.0.3

JSR Score Improvements:
✅ Symbol documentation (80%+)
✅ No slow types
✅ Package description
✅ GitHub Actions provenance workflow
✅ Ready for runtime compatibility marking

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@yigitkonur/latitude-deno-sdk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Latitude Deno SDK - Community fork of the official Node.js SDK, rebuilt for Deno and Supabase Edge Functions",
   "license": "MIT",
   "exports": "./src/mod.ts",
@@ -15,7 +15,8 @@
 
   "compilerOptions": {
     "strict": true,
-    "lib": ["deno.window", "esnext"]
+    "lib": ["deno.window", "esnext"],
+    "isolatedDeclarations": true
   },
 
   "tasks": {
@@ -38,7 +39,6 @@
       "exclude": [
         "no-explicit-any",
         "verbatim-module-syntax",
-        "no-slow-types",
         "ban-types",
         "require-await"
       ]
