--- a/deno.json
+++ b/deno.json
@@ -10,7 +10,8 @@
     "eventsource-parser/stream": "npm:eventsource-parser@^2.0.1/stream",
     "zod": "npm:zod@^3.23.0",
     "promptl-ai": "npm:promptl-ai@^0.9.4",
-    "@std/assert": "jsr:@std/assert@^1.0.0"
+    "@std/assert": "jsr:@std/assert@^1.0.0",
+    "@std/semver": "jsr:@std/semver@^1.0.3"
   },
 
   "compilerOptions": {
@@ -22,9 +23,9 @@
   "tasks": {
     "check": "deno check src/mod.ts",
     "test": "deno test --allow-net --allow-env src/tests/",
-    "version:patch": "deno run -A jsr:@deno/semver-bump patch deno.json && git add deno.json && git commit -m \"chore: bump version\"",
-    "version:minor": "deno run -A jsr:@deno/semver-bump minor deno.json && git add deno.json && git commit -m \"chore: bump version\"",
-    "version:major": "deno run -A jsr:@deno/semver-bump major deno.json && git add deno.json && git commit -m \"chore: bump version\"",
+    "version:patch": "deno run -A scripts/bump.ts patch && git add deno.json && git commit -m \"chore: bump version\"",
+    "version:minor": "deno run -A scripts/bump.ts minor && git add deno.json && git commit -m \"chore: bump version\"",
+    "version:major": "deno run -A scripts/bump.ts major && git add deno.json && git commit -m \"chore: bump version\"",
     "fmt": "deno fmt src/",
     "lint": "deno lint src/"
   },
