feat: add JSR production lint rules (recommended + jsr tags)
- Enable recommended + jsr lint rule tags for JSR compliance
- Add explicit-module-boundary-types, camelcase, single-var-declarator, no-console
- Fix ban-types violations (replace {} with Record<string, never>)
- Fix require-await violations (remove async from non-awaiting methods)
- Fix verbatim-module-syntax violations (use export type)
- Fix no-console violations (remove console.warn in cleanup)
- Add explicit return types where required
- Reorder type definitions before usage

This ensures the SDK meets production JSR standards for:
- Strict typing and JSR no-slow-types compliance
- Cross-runtime compatibility (no Node globals)
- Clean documentation and type exports

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@yigitkonur/latitude-deno-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Latitude Deno SDK - Community fork of the official Node.js SDK, rebuilt for Deno and Supabase Edge Functions",
   "license": "MIT",
   "exports": "./src/mod.ts",
@@ -38,11 +38,15 @@
   },
   "lint": {
     "rules": {
-      "exclude": [
-        "no-explicit-any",
-        "verbatim-module-syntax",
-        "ban-types",
-        "require-await"
+      "tags": [
+        "recommended",
+        "jsr"
+      ],
+      "include": [
+        "explicit-module-boundary-types",
+        "camelcase",
+        "single-var-declarator",
+        "no-console"
       ]
     }
   },
