feat: add comprehensive examples and Supabase Edge Functions
Examples added:
- basic_usage.ts - Simple prompt execution
- streaming.ts - Real-time streaming with callbacks
- streaming_json_parse.ts - Parse JSON before stream completes (advanced)
- error_handling.ts - Production error handling patterns
- chat_conversation.ts - Multi-turn conversations

Supabase Edge Functions:
- demo-latitude-run-prompt - Execute prompts (sync/stream/json modes)
- demo-latitude-stream-json - Incremental JSON parsing
- demo-latitude-chat - Multi-turn conversations

Updated lint config to exclude examples folder from strict rules.

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "name": "@yigitkonur/latitude-deno-sdk",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Latitude Deno SDK - Community fork of the official Node.js SDK, rebuilt for Deno and Supabase Edge Functions",
   "license": "MIT",
   "exports": "./src/mod.ts",
@@ -37,6 +37,13 @@
     "proseWrap": "preserve"
   },
   "lint": {
+    "include": [
+      "src/"
+    ],
+    "exclude": [
+      "examples/",
+      "scripts/"
+    ],
     "rules": {
       "tags": [
         "recommended",
