--- a/examples/supabase-test/supabase/config.toml
+++ b/examples/supabase-test/supabase/config.toml
@@ -358,11 +358,18 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 
 [functions.latitude-test]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/latitude-test/deno.json"
-# Uncomment to specify a custom file path to the entrypoint.
-# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
 entrypoint = "./functions/latitude-test/index.ts"
-# Specifies static files to be bundled with the function. Supports glob patterns.
-# For example, if you want to serve static HTML pages in your function:
-# static_files = [ "./functions/latitude-test/*.html" ]
+
+[functions.demo-latitude-run-prompt]
+enabled = true
+verify_jwt = false
+
+[functions.demo-latitude-chat]
+enabled = true
+verify_jwt = false
+
+[functions.demo-latitude-stream-json]
+enabled = true
+verify_jwt = false
